# rfetch

./: Cargo.toml  LICENSE  README.md
.github/: funding.yml
src/: ecosys.rs  lib.rs  main.rs  uname.rs
