[package]
name = "rfetch"
version = "0.4.1"
authors = ["Avery Murray <averylapine@gmail.com>"]
license = "MIT"
edition = "2018"
description = "Fetch system and user information with no dependancies"
repository = "https://github.com/caverym/rfetch"
readme = "README.md"
keywords = ["terminal", "fetch", "no-deps"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# None!